fixed some layout bugs

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -32,7 +32,7 @@ h2 {
 .pt-150 { padding-top: 150px; } 
 
 .contact-main {
-  height: 600px;
+  /* height: 600px; */
   display: flex;
   justify-content: center;
   align-items: center;
